--- a/about-us.html
+++ b/about-us.html
@@ -18,8 +18,8 @@
           </div>
         </div>
         <ul class="nav-menu">
-          <li><a href="#" class="active">Anasayfa</a></li>
-          <li><a href="#">Hakkımızda</a></li>
+          <li><a href="/" >Anasayfa</a></li>
+          <li><a href="#" class="active">Hakkımızda</a></li>
           <li><a href="#">Hizmetlerimiz</a></li>
           <li><a href="#">Projelerimiz</a></li>
           <li><a href="#">Referanslarımız</a></li>
