fix: styling errors and and implement body containers

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div> -->
       </nav>
     </header>
-    <main>
+    <main  class="body-container">
       <!-- Section First Start -->
       <section class="section-one">BÖLÜM 1</section>
       <!-- Section First End -->
