feat: implement 1200px width for sections

--- a/index.html
+++ b/index.html
@@ -39,93 +39,97 @@
             </div> -->
       </nav>
     </header>
-    <main  class="body-container">
+    <main class="body-container">
       <!-- Section First Start -->
       <section class="section-one">BÖLÜM 1</section>
       <!-- Section First End -->
 
       <!-- Section Second Start -->
       <section class="section-second">
-        <h2>HİZMETLERİMİZ</h2>
-        <div class="section-structure">
-          <div class="cards">
-            <div class="card">
-              <div class="icon">
-                <i class="bi bi-fan"></i>
+        <div class="section-container">
+          <h2>HİZMETLERİMİZ</h2>
+          <div class="section-structure">
+            <div class="cards">
+              <div class="card">
+                <div class="icon">
+                  <i class="bi bi-fan"></i>
+                </div>
+                <div class="card-body">
+                  <h4>Yerden Isıtma Sistemleri</h4>
+                  <p>
+                    Yerden ısıtma sistemleri ortamın zeminine boru ya da
+                    kablolar ile döşenen mekanın ısınmasını sağlayan ısıtma
+                    sistemleridir.
+                  </p>
+                </div>
               </div>
-              <div class="card-body">
-                <h4>Yerden Isıtma Sistemleri</h4>
-                <p>
-                  Yerden ısıtma sistemleri ortamın zeminine boru ya da kablolar
-                  ile döşenen mekanın ısınmasını sağlayan ısıtma sistemleridir.
-                </p>
+              <div class="card">
+                <div class="icon">
+                  <i class="bi bi-cloud-fill"></i>
+                </div>
+                <div class="card-body">
+                  <h4>Havalandırma Sistemleri</h4>
+                  <p>
+                    Havalandırma Sistemleri; Kapalı alanlar için gerekli olan,
+                    çeşitli seçenekleri bulunan havalandırma sistemleri ile
+                    ilgili müşterilerimize yerinde ücretsiz keşif imkanı
+                    sunuyor, projelendirme, bakım-onarım süreçlerini
+                    yönetiyoruz.
+                  </p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <div class="icon">
-                <i class="bi bi-cloud-fill"></i>
+              <div class="card">
+                <div class="icon">
+                  <i class="bi bi-thermometer"></i>
+                </div>
+                <div class="card-body">
+                  <h4>Isıtma Sistemleri</h4>
+                  <p>
+                    Okullar, konutlar, iş yerleri, fabrikalar için farklı ısıtma
+                    sistemleri seçenekleriyle müşterilerimiz için en etkin
+                    ısıtma sistemlerinin kurulumu, bakım-onarım işlemlerini
+                    gerçekleştiriyoruz.
+                  </p>
+                </div>
               </div>
-              <div class="card-body">
-                <h4>Havalandırma Sistemleri</h4>
-                <p>
-                  Havalandırma Sistemleri; Kapalı alanlar için gerekli olan,
-                  çeşitli seçenekleri bulunan havalandırma sistemleri ile ilgili
-                  müşterilerimize yerinde ücretsiz keşif imkanı sunuyor,
-                  projelendirme, bakım-onarım süreçlerini yönetiyoruz.
-                </p>
+              <div class="card">
+                <div class="icon">
+                  <i class="bi bi-thermometer"></i>
+                </div>
+                <div class="card-body">
+                  <h4>Soğutma Sistemleri</h4>
+                  <p>
+                    Üretim tesisleri, depolama alanları, oteller için gerekli
+                    olan soğutma sistemleri projelendirme süreçlerini yönetiyor,
+                    kurulum, bakım-onarım hizmetleri sunuyoruz.
+                  </p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <div class="icon">
-                <i class="bi bi-thermometer"></i>
+              <div class="card">
+                <div class="icon">
+                  <i class="bi bi-thermometer"></i>
+                </div>
+                <div class="card-body">
+                  <h4>Yangın Söndürme Sistemleri</h4>
+                  <p>
+                    Kapalı alanlar için kurulumu zorunlu hale getirilen yangın
+                    söndürme sistemleri seçenekleriyle ilgili müşterilerimize
+                    projelendirme, bakım-onarım hizmetleri sunuyoruz.
+                  </p>
+                </div>
               </div>
-              <div class="card-body">
-                <h4>Isıtma Sistemleri</h4>
-                <p>
-                  Okullar, konutlar, iş yerleri, fabrikalar için farklı ısıtma
-                  sistemleri seçenekleriyle müşterilerimiz için en etkin ısıtma
-                  sistemlerinin kurulumu, bakım-onarım işlemlerini
-                  gerçekleştiriyoruz.
-                </p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="icon">
-                <i class="bi bi-thermometer"></i>
-              </div>
-              <div class="card-body">
-                <h4>Soğutma Sistemleri</h4>
-                <p>
-                  Üretim tesisleri, depolama alanları, oteller için gerekli olan
-                  soğutma sistemleri projelendirme süreçlerini yönetiyor,
-                  kurulum, bakım-onarım hizmetleri sunuyoruz.
-                </p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="icon">
-                <i class="bi bi-thermometer"></i>
-              </div>
-              <div class="card-body">
-                <h4>Yangın Söndürme Sistemleri</h4>
-                <p>
-                  Kapalı alanlar için kurulumu zorunlu hale getirilen yangın
-                  söndürme sistemleri seçenekleriyle ilgili müşterilerimize
-                  projelendirme, bakım-onarım hizmetleri sunuyoruz.
-                </p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="icon">
-                <i class="bi bi-thermometer"></i>
-              </div>
-              <div class="card-body">
-                <h4>Sıhhi Tesisat</h4>
-                <p>
-                  Mekanlar için gerekli olan sıhhi tesisat için yerinde ücretsiz
-                  keşif hizmeti veriyor ve projelendirme süreçlerini
-                  yönetiyoruz.
-                </p>
+              <div class="card">
+                <div class="icon">
+                  <i class="bi bi-thermometer"></i>
+                </div>
+                <div class="card-body">
+                  <h4>Sıhhi Tesisat</h4>
+                  <p>
+                    Mekanlar için gerekli olan sıhhi tesisat için yerinde
+                    ücretsiz keşif hizmeti veriyor ve projelendirme süreçlerini
+                    yönetiyoruz.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -245,13 +249,13 @@
         <div class="footer-bottom-container">
           <div class="icons">
             <div class="icon">
-            <a href="#"><i class="bi bi-instagram"></i></a>
+              <a href="#"><i class="bi bi-instagram"></i></a>
             </div>
             <div class="icon">
-            <a href="#"><i class="bi bi-twitter"></i></a>
+              <a href="#"><i class="bi bi-twitter"></i></a>
             </div>
             <div class="icon">
-            <a href="#"><i class="bi bi-facebook"></i></a>
+              <a href="#"><i class="bi bi-facebook"></i></a>
             </div>
           </div>
           <div class="footer-bottom-text">
