feat: implement container wrappers

--- a/index.html
+++ b/index.html
@@ -139,41 +139,43 @@
 
       <!-- Section Third Start -->
       <section class="section-third">
-        <h2>REFERANSLARIMIZ</h2>
-        <div class="ref-container">
-          <div class="ref-cards">
-            <div class="ref-card">
-              <img src="img/logo.jpg" alt="" />
+        <div class="section-container">
+          <h2>REFERANSLARIMIZ</h2>
+          <div class="ref-container">
+            <div class="ref-cards">
+              <div class="ref-card">
+                <img src="img/logo.jpg" alt="" />
+              </div>
             </div>
-          </div>
-          <div class="ref-cards">
-            <div class="ref-card">
-              <img src="img/logo.jpg" alt="" />
+            <div class="ref-cards">
+              <div class="ref-card">
+                <img src="img/logo.jpg" alt="" />
+              </div>
             </div>
-          </div>
-          <div class="ref-cards">
-            <div class="ref-card">
-              <img src="img/logo.jpg" alt="" />
+            <div class="ref-cards">
+              <div class="ref-card">
+                <img src="img/logo.jpg" alt="" />
+              </div>
             </div>
-          </div>
-          <div class="ref-cards">
-            <div class="ref-card">
-              <img src="img/logo.jpg" alt="" />
+            <div class="ref-cards">
+              <div class="ref-card">
+                <img src="img/logo.jpg" alt="" />
+              </div>
             </div>
-          </div>
-          <div class="ref-cards">
-            <div class="ref-card">
-              <img src="img/logo.jpg" alt="" />
+            <div class="ref-cards">
+              <div class="ref-card">
+                <img src="img/logo.jpg" alt="" />
+              </div>
             </div>
-          </div>
-          <div class="ref-cards">
-            <div class="ref-card">
-              <img src="img/logo.jpg" alt="" />
+            <div class="ref-cards">
+              <div class="ref-card">
+                <img src="img/logo.jpg" alt="" />
+              </div>
             </div>
-          </div>
-          <div class="ref-cards">
-            <div class="ref-card">
-              <img src="img/logo.jpg" alt="" />
+            <div class="ref-cards">
+              <div class="ref-card">
+                <img src="img/logo.jpg" alt="" />
+              </div>
             </div>
           </div>
         </div>
@@ -182,41 +184,43 @@
 
       <!-- Section Fourth Start -->
       <section class="section-fourth">
-        <h2>İLETİŞİM</h2>
-        <div class="contact-container">
-          <div class="contact-info">
-            <h3><strong>İletişim Bilgileri</strong></h3>
-            <div class="contact-adress">
-              <i class="bi bi-send-arrow-up"></i>
-              <p>
-                Fulya Mahallesi Ortaklar Caddesi Denizhan Sokak Lale Han No:7
-                Kat:1 Daire:3, 34381 Şişli/İstanbul
-              </p>
+        <div class="section-container">
+          <h2>İLETİŞİM</h2>
+          <div class="contact-container">
+            <div class="contact-info">
+              <h3><strong>İletişim Bilgileri</strong></h3>
+              <div class="contact-adress">
+                <i class="bi bi-send-arrow-up"></i>
+                <p>
+                  Fulya Mahallesi Ortaklar Caddesi Denizhan Sokak Lale Han No:7
+                  Kat:1 Daire:3, 34381 Şişli/İstanbul
+                </p>
+              </div>
+              <div class="contact-mail">
+                <i class="bi bi-envelope-at-fill"></i>
+                <a href="mailto:omerbener@gmail.com"
+                  ><span> omerbener@gmail.com </span></a
+                >
+              </div>
+              <div class="contact-phone">
+                <i class="bi bi-telephone-fill"></i>
+                <a href="tel:05331328430">
+                  <span> 05331328430 </span>
+                </a>
+              </div>
             </div>
-            <div class="contact-mail">
-              <i class="bi bi-envelope-at-fill"></i>
-              <a href="mailto:omerbener@gmail.com"
-                ><span> omerbener@gmail.com </span></a
-              >
-            </div>
-            <div class="contact-phone">
-              <i class="bi bi-telephone-fill"></i>
-              <a href="tel:05331328430">
-                <span> 05331328430 </span>
-              </a>
-            </div>
-          </div>
 
-          <div class="contact-map">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2679.6984139567703!2d35.34191752767538!3d36.992701657494656!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15288f7508c8acd3%3A0xf207d8b1dd719ebe!2zU2luYW5wYcWfYSBNYWhhbGxlc2kgTXVodGFybMSxxJ_EsQ!5e0!3m2!1str!2str!4v1740083409837!5m2!1str!2str"
-              width="600"
-              height="450"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
+            <div class="contact-map">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2679.6984139567703!2d35.34191752767538!3d36.992701657494656!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15288f7508c8acd3%3A0xf207d8b1dd719ebe!2zU2luYW5wYcWfYSBNYWhhbGxlc2kgTXVodGFybMSxxJ_EsQ!5e0!3m2!1str!2str!4v1740083409837!5m2!1str!2str"
+                width="600"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
           </div>
         </div>
       </section>
