fix: navbar wrap and add calculation for height for navbar and slider

--- a/index.html
+++ b/index.html
@@ -224,10 +224,13 @@
           </div>
         </div>
       </section>
+
       <section class="footer">
-        <div class="about-us">
-          <div class="about-us-img">
-            <img src="img/logo.jpg" alt="" />
+        <div class="section-container footer-wrapper">
+          <div class="about-us">
+            <div class="about-us-img">
+              <img src="img/logo.jpg" alt="" />
+            </div>
           </div>
           <div class="about-us-text">
             <p>
@@ -238,27 +241,28 @@
               hizmetleri vermek amacı ile 2017 yılında İstanbul’da kurulmuştur.
             </p>
           </div>
-        </div>
-        <div class="footer-menu">
-          <h3>Hızlı Menü</h3>
-          <ul>
-            <li><a href="#">Hakkımızda</a></li>
-            <li><a href="#">Hizmetler</a></li>
-            <li><a href="#">İletişim</a></li>
-            <li><a href="#">Gizlilik Politikası</a></li>
-          </ul>
+          <div class="footer-menu">
+            <h3>Hızlı Menü</h3>
+            <ul>
+              <li><a href="#">Hakkımızda</a></li>
+              <li><a href="#">Hizmetler</a></li>
+              <li><a href="#">İletişim</a></li>
+              <li><a href="#">Gizlilik Politikası</a></li>
+            </ul>
+          </div>
         </div>
       </section>
+
       <footer class="footer-bottom">
         <div class="footer-bottom-container">
           <div class="icons">
-            <div class="icon">
+            <div class="social-icon">
               <a href="#"><i class="bi bi-instagram"></i></a>
             </div>
-            <div class="icon">
+            <div class="social-icon">
               <a href="#"><i class="bi bi-twitter"></i></a>
             </div>
-            <div class="icon">
+            <div class="social-icon">
               <a href="#"><i class="bi bi-facebook"></i></a>
             </div>
           </div>
