feat: add next js project to be debugged

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
   </head>
   <body>
     <header>
-      <nav class="navbar">
-        <div class="logo">
+      <nav className="navbar">
+        <div className="logo">
           <img src="img/logo.jpg" alt="Logo" />
-          <div class="logo-text">
+          <div className="logo-text">
             <span>MÜHENDİSLİK</span>
             <span>PROJE YÖNETİMİ</span>
           </div>
         </div>
-        <ul class="nav-menu">
-          <li><a href="#" class="active">Anasayfa</a></li>
+        <ul className="nav-menu">
+          <li><a href="#" className="active">Anasayfa</a></li>
           <li><a href="about-us.html">Hakkımızda</a></li>
           <li><a href="#">Hizmetlerimiz</a></li>
           <li><a href="#">Projelerimiz</a></li>
@@ -32,29 +32,29 @@
           <li><a href="#">Blog</a></li>
           <li><a href="#">İletişim</a></li>
         </ul>
-        <!-- <div class="nav-btn">
-                <a href="#" class="market-btn">
+        <!-- <div className="nav-btn">
+                <a href="#" className="market-btn">
                      Market
                 </a>
             </div> -->
       </nav>
     </header>
-    <main class="body-container">
+    <main className="body-container">
       <!-- Section First Start -->
-      <section class="section-one">BÖLÜM 1</section>
+      <section className="section-one">BÖLÜM 1</section>
       <!-- Section First End -->
 
       <!-- Section Second Start -->
-      <section class="section-second">
-        <div class="section-container">
+      <section className="section-second">
+        <div className="section-container">
           <h2>HİZMETLERİMİZ</h2>
-          <div class="section-structure">
-            <div class="cards">
-              <div class="card">
-                <div class="icon">
-                  <i class="bi bi-fan"></i>
+          <div className="section-structure">
+            <div className="cards">
+              <div className="card">
+                <div className="icon">
+                  <i className="bi bi-fan"></i>
                 </div>
-                <div class="card-body">
+                <div className="card-body">
                   <h4>Yerden Isıtma Sistemleri</h4>
                   <p>
                     Yerden ısıtma sistemleri ortamın zeminine boru ya da
@@ -63,11 +63,11 @@
                   </p>
                 </div>
               </div>
-              <div class="card">
-                <div class="icon">
-                  <i class="bi bi-cloud-fill"></i>
+              <div className="card">
+                <div className="icon">
+                  <i className="bi bi-cloud-fill"></i>
                 </div>
-                <div class="card-body">
+                <div className="card-body">
                   <h4>Havalandırma Sistemleri</h4>
                   <p>
                     Havalandırma Sistemleri; Kapalı alanlar için gerekli olan,
@@ -78,11 +78,11 @@
                   </p>
                 </div>
               </div>
-              <div class="card">
-                <div class="icon">
-                  <i class="bi bi-thermometer"></i>
+              <div className="card">
+                <div className="icon">
+                  <i className="bi bi-thermometer"></i>
                 </div>
-                <div class="card-body">
+                <div className="card-body">
                   <h4>Isıtma Sistemleri</h4>
                   <p>
                     Okullar, konutlar, iş yerleri, fabrikalar için farklı ısıtma
@@ -92,11 +92,11 @@
                   </p>
                 </div>
               </div>
-              <div class="card">
-                <div class="icon">
-                  <i class="bi bi-thermometer"></i>
+              <div className="card">
+                <div className="icon">
+                  <i className="bi bi-thermometer"></i>
                 </div>
-                <div class="card-body">
+                <div className="card-body">
                   <h4>Soğutma Sistemleri</h4>
                   <p>
                     Üretim tesisleri, depolama alanları, oteller için gerekli
@@ -105,11 +105,11 @@
                   </p>
                 </div>
               </div>
-              <div class="card">
-                <div class="icon">
-                  <i class="bi bi-thermometer"></i>
+              <div className="card">
+                <div className="icon">
+                  <i className="bi bi-thermometer"></i>
                 </div>
-                <div class="card-body">
+                <div className="card-body">
                   <h4>Yangın Söndürme Sistemleri</h4>
                   <p>
                     Kapalı alanlar için kurulumu zorunlu hale getirilen yangın
@@ -118,11 +118,11 @@
                   </p>
                 </div>
               </div>
-              <div class="card">
-                <div class="icon">
-                  <i class="bi bi-thermometer"></i>
+              <div className="card">
+                <div className="icon">
+                  <i className="bi bi-thermometer"></i>
                 </div>
-                <div class="card-body">
+                <div className="card-body">
                   <h4>Sıhhi Tesisat</h4>
                   <p>
                     Mekanlar için gerekli olan sıhhi tesisat için yerinde
@@ -138,42 +138,42 @@
       <!-- Section Second End -->
 
       <!-- Section Third Start -->
-      <section class="section-third">
-        <div class="section-container">
+      <section className="section-third">
+        <div className="section-container">
           <h2>REFERANSLARIMIZ</h2>
-          <div class="ref-container">
-            <div class="ref-cards">
-              <div class="ref-card">
+          <div className="ref-container">
+            <div className="ref-cards">
+              <div className="ref-card">
                 <img src="img/logo.jpg" alt="" />
               </div>
             </div>
-            <div class="ref-cards">
-              <div class="ref-card">
+            <div className="ref-cards">
+              <div className="ref-card">
                 <img src="img/logo.jpg" alt="" />
               </div>
             </div>
-            <div class="ref-cards">
-              <div class="ref-card">
+            <div className="ref-cards">
+              <div className="ref-card">
                 <img src="img/logo.jpg" alt="" />
               </div>
             </div>
-            <div class="ref-cards">
-              <div class="ref-card">
+            <div className="ref-cards">
+              <div className="ref-card">
                 <img src="img/logo.jpg" alt="" />
               </div>
             </div>
-            <div class="ref-cards">
-              <div class="ref-card">
+            <div className="ref-cards">
+              <div className="ref-card">
                 <img src="img/logo.jpg" alt="" />
               </div>
             </div>
-            <div class="ref-cards">
-              <div class="ref-card">
+            <div className="ref-cards">
+              <div className="ref-card">
                 <img src="img/logo.jpg" alt="" />
               </div>
             </div>
-            <div class="ref-cards">
-              <div class="ref-card">
+            <div className="ref-cards">
+              <div className="ref-card">
                 <img src="img/logo.jpg" alt="" />
               </div>
             </div>
@@ -183,34 +183,34 @@
       <!-- Section Third End -->
 
       <!-- Section Fourth Start -->
-      <section class="section-fourth">
-        <div class="section-container">
+      <section className="section-fourth">
+        <div className="section-container">
           <h2>İLETİŞİM</h2>
-          <div class="contact-container">
-            <div class="contact-info">
+          <div className="contact-container">
+            <div className="contact-info">
               <h3><strong>İletişim Bilgileri</strong></h3>
-              <div class="contact-adress">
-                <i class="bi bi-send-arrow-up"></i>
+              <div className="contact-adress">
+                <i className="bi bi-send-arrow-up"></i>
                 <p>
                   Fulya Mahallesi Ortaklar Caddesi Denizhan Sokak Lale Han No:7
                   Kat:1 Daire:3, 34381 Şişli/İstanbul
                 </p>
               </div>
-              <div class="contact-mail">
-                <i class="bi bi-envelope-at-fill"></i>
+              <div className="contact-mail">
+                <i className="bi bi-envelope-at-fill"></i>
                 <a href="mailto:omerbener@gmail.com"
                   ><span> omerbener@gmail.com </span></a
                 >
               </div>
-              <div class="contact-phone">
-                <i class="bi bi-telephone-fill"></i>
+              <div className="contact-phone">
+                <i className="bi bi-telephone-fill"></i>
                 <a href="tel:05331328430">
                   <span> 05331328430 </span>
                 </a>
               </div>
             </div>
 
-            <div class="contact-map">
+            <div className="contact-map">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2679.6984139567703!2d35.34191752767538!3d36.992701657494656!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15288f7508c8acd3%3A0xf207d8b1dd719ebe!2zU2luYW5wYcWfYSBNYWhhbGxlc2kgTXVodGFybMSxxJ_EsQ!5e0!3m2!1str!2str!4v1740083409837!5m2!1str!2str"
                 width="600"
@@ -225,14 +225,14 @@
         </div>
       </section>
 
-      <section class="footer">
-        <div class="section-container footer-wrapper">
-          <div class="about-us">
-            <div class="about-us-img">
+      <section className="footer">
+        <div className="section-container footer-wrapper">
+          <div className="about-us">
+            <div className="about-us-img">
               <img src="img/logo.jpg" alt="" />
             </div>
           </div>
-          <div class="about-us-text">
+          <div className="about-us-text">
             <p>
               SALT Mühendislik; Hastane, alışveriş merkezi, otel, konut, ofis,
               restoran vb. yapılarda ısıtma tesisatı, soğutma tesisatı,
@@ -241,7 +241,7 @@
               hizmetleri vermek amacı ile 2017 yılında İstanbul’da kurulmuştur.
             </p>
           </div>
-          <div class="footer-menu">
+          <div className="footer-menu">
             <h3>Hızlı Menü</h3>
             <ul>
               <li><a href="#">Hakkımızda</a></li>
@@ -253,20 +253,20 @@
         </div>
       </section>
 
-      <footer class="footer-bottom">
-        <div class="footer-bottom-container">
-          <div class="icons">
-            <div class="social-icon">
-              <a href="#"><i class="bi bi-instagram"></i></a>
+      <footer className="footer-bottom">
+        <div className="footer-bottom-container">
+          <div className="icons">
+            <div className="social-icon">
+              <a href="#"><i className="bi bi-instagram"></i></a>
             </div>
-            <div class="social-icon">
-              <a href="#"><i class="bi bi-twitter"></i></a>
+            <div className="social-icon">
+              <a href="#"><i className="bi bi-twitter"></i></a>
             </div>
-            <div class="social-icon">
-              <a href="#"><i class="bi bi-facebook"></i></a>
+            <div className="social-icon">
+              <a href="#"><i className="bi bi-facebook"></i></a>
             </div>
           </div>
-          <div class="footer-bottom-text">
+          <div className="footer-bottom-text">
             <p>Tüm Hakları Saklıdır &COPY; 2025 Bener İklimlendirme</p>
           </div>
         </div>
